# fastapi-poc

./: .gitignore  alembic.ini  example.db  pyproject.toml
app/: init_data.py  main.py  recipe_handlers.py
app/alembic/: env.py
app/alembic/versions/: 07b945ca2fc0_add_password_to_user.py  2ea59c1dd912_create_user_and_recipe_tables.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/handler/: recipe.py  user.py
app/clients/: reddit.py
app/core/: config.py  security.py
app/db/: models.py  seeder.py  session.py
app/domain/: recipe.py  user.py
app/domain/repository/: recipe.py  user.py
app/domains/: recipe.py  recipe_repository.py  user.py  user_repository.py
app/domains/repositories/: recipe.py  user.py
app/dto/: recipe.py  user.py
app/dtos/: recipe_dtos.py
app/gateway/: reddit.py
app/handler/: __init__.py  recipe.py  user.py
app/handlers/: recipe_handlers.py
app/service/: recipe.py  recipe_svc.py  user.py
app/services/: recipe.py  user.py
tests/: conftest.py
tests/api/: test_recipe.py
tests/integration/api/: test_recipe.py
tests/unit/services/: test_recipy.py
typings/automapper/: __init__.pyi  exceptions.pyi  mapper_initializer.pyi
